website/versioned_docs/version-2.0/api-reference/global-state.md
---
sidebar_position: 1
id: global-state
title: useStateGlobal()
slug: /api-reference/global-state/
description: Global state set up for State-jet
keywords:
- global state
- global-state
---

An `useStateGlobal()` represents single key-value state	in State-jet. It enables storing global data across React components **without** using a store.

```tsx
function useStateGlobal<T>(
    key: string,
    initialValue?: T,
    options?: { middleware?: Middleware<T>[], persist?: boolean, encrypt?: boolean, frameSync?: boolean }
) 
```

- `key` - A unique string used to identify the global state.

- `initialValue` - can holds any data types (string, array, object)

- `options` - An optional parameter which supports multiple options
    * `middleware` - which is used to add middleware support for state jet. Refer (**[Middlewares](/docs/api-reference/middlewares)**)
    * `persist` - if persist is true, the state data will be stored in localStorage. Refer (**[Persistence](/docs/api-reference/persistence)**)
    * `encrypt` - supports encryption/decryption. Refer (**[Encryption](/docs/api-reference/encryption)**)
    * `frameSync` - Useful for animation-heavy, high-frequency, or frame-sensitive state changes.

      It returns the following properties:  
        - **`set()`** – Updates the state data.
        - **`get()`** – Fetches the current state data.
        - **`useState()`** – Retrieves the latest state snapshot data.  
        - **`undo()`** – Reverts the state to the previous value. Refer (**[Undo](/docs/api-reference/redo-undo)**)
        - **`redo()`** – Restores the undone state. Refer (**[Redo](/docs/api-reference/redo-undo)**)
        - **`clear()`** – Resets the state data. Refer (**[Clear](/docs/api-reference/redo-undo)**)

:::warning

In state-jet@v1, the `useStore()` function was used to retrieve the latest state data. However, this functionality has now been replaced by `useState()`. Starting from v1, the `useStore()` function is used to create a new store.

:::

### ✅ Example: Creating global state for counter App

Create a file at `src/store/index.ts`:

```ts title="src/store/index.ts"
import { useStateGlobal } from "state-jet";

export const counterState = useStateGlobal("counter", 0);
```

Create a file at `src/components/Counter.tsx`:

```tsx title="src/components/Counter.tsx"
import { counterState } from "../store";

export default function Counter() {
  const count = counterState.useState() as number;

  return (
    <div>
      <h1>Counter: {count}</h1>
      <button onClick={() => counterState.set(count - 1)}>Decrement</button>
      <button onClick={() => counterState.set(count + 1)}>Increment</button>
    </div>
  );
}
```
    